--- a/globs/threats.tex
+++ b/globs/threats.tex
@@ -2,7 +2,7 @@
 
 {\bf Glob Sampling Bias:} Our methodology for procuring the glob corpus faces two threats. First, our corpus is composed of globs sampled from publicly available projects on 
 github in a fixed range of programming languages. If these sets are not sufficiently representative of the true distribution then our results may be biased. To counteract this 
-risk, we selected a range of the most popular programming languages. Second, our selection methodology involved using a set of extraction regular expressions that may miss some 
+risk, we selected a range of popular programming languages. Second, our selection methodology involved using a set of extraction regular expressions that may miss some 
 uses of globs. To reduce this risk we randomly spot-checked and refined the extraction pipeline to ensure high coverage.
 
 {\bf Discussion Bias and Categorization:} Our methodology for gathering and analyzing developer discourse on globs also contains two possible threats to validity. First, is 
