--- a/globs/discussion.tex
+++ b/globs/discussion.tex
@@ -2,7 +2,7 @@
 
 Our empirical study revealed that globbing's critical deficiencies -- semantic fragmentation across languages, security vulnerabilities, and expressiveness limitations -- are rooted 
 in a historical architectural choice. Specifically, the coupling of pattern semantics with system context. We propose a formal specification that codifies the common features 
-in existing globbing system, providing a consistent and clear definition of inconsistent behaviors, and provides a clean distinction between logical pattern meaning and system behavior 
+in existing globbing system, providing a consistent and clear definition of behaviors, and provides a clean distinction between logical pattern meaning and system behavior 
 for execution. 
 
 \subsection{Separating Pattern Semantics from Execution}
@@ -39,11 +39,11 @@ TERM  ::= literal
 
 This grammar serves as the foundation for a two-layered architecture that distinctly separates \textbf{universal pattern semantics} from \textbf{execution behaviors}. The root 
 production for a glob pattern is \texttt{GLOB}, which may be annotated with optional flags (\texttt{u}, \texttt{h}, \texttt{l}, \texttt{n}, \texttt{i}, \texttt{s}) to control execution behaviors without 
-altering the core structure of the path itself. The physical path structure is defined by the \texttt{PATH} non-terminal, which recursively composes components (\texttt{COMP})
+altering the core structure of the path itself. The physical path structure is defined by the \texttt{PATH} non-terminal, which recursively composes components (\texttt{SEQ})
 using the forward slash (\texttt{/}) as a \emph{standardized} path separator where the, physical, character used for matching is controlled by the \emph{separator} (\texttt{s}) flag. 
 
-The path can be made of up to three types of components: recursive wildcards (\texttt{**}), single-level wildcards (\texttt{*}), and concrete term sequences (\texttt{SEQ} and \texttt{TERM}). 
-Concrete components can be simple terms made of literal characters, bounded range matches, wildcards, variable substitutions (\texttt{\$\{identifier\}}), or union constructs \texttt{(opt1|opt2)}.\\ 
+The path can be made of up to two components: recursive wildcards (\texttt{**}) and concrete term sequences (\texttt{SEQ}). 
+Concrete \texttt{SEQ} components can be simple terms made of literal characters, bounded range matches, wildcards, variable substitutions (\texttt{\$\{identifier\}}), or union constructs \texttt{(opt1|opt2)}.\\ 
 
 \noindent
 Sample patterns defined by this grammar include:
@@ -52,7 +52,7 @@ Sample patterns defined by this grammar include:
 \item \textbackslash\texttt{**/src/*.java}\textbackslash specifies a recursive prefix that ends in ``\texttt{src}'', then an immediate match of child files ending with ``\texttt{.java}"
 \item \textbackslash\texttt{(cat|dog)*}\textbackslash defines the union of files beginning with ``\texttt{cat}'' or ``\texttt{dog}'', followed by any character sequence
 \item \textbackslash\texttt{/docs/(*.log|*.tmp)}\textbackslash expresses the files matching either \texttt{*.log} or \texttt{*.tmp} patterns
-\item \textbackslash\texttt{/\${user}/docs/ff\_[0-9]\{3,\}.tmp}\textbackslash is a parameterized path \texttt{user} that matches files starting with ``\texttt{ff\_}'' followed by at 
+\item \textbackslash\texttt{/\$\{user\}/docs/ff\_[0-9]\{3,\}.tmp}\textbackslash is a parameterized path \texttt{user} that matches files starting with ``\texttt{ff\_}'' followed by at 
 least three digits and ending with ``\texttt{.tmp}''
 \end{itemize}
 
@@ -76,15 +76,15 @@ and interpretation while the flags control execution details, like symlink follo
 ambiguity (18.7\% of cross platform failures) is eliminated through invariant parsing rules.
 
 The expressiveness limitations documented in RQ4 find comprehensive solutions through \textsc{GlobSpec}'s composition mechanisms. The union, range complement, negation, and substitution 
-rules enable advanced pattern operations previously requiring manual workarounds. This formalism resolves the persistent question of features requests and workarounds seen in the developer 
-posts -- such as 29.5\% feature requests involving negation -- and enables principled glob construction for cases like \texttt{(*.log|*.tmp)}. 
-The substitution mechanism \texttt{\$\{}pattern\_name\texttt{\}} addresses 19.7\% of feature gap requests by enabling pattern reuse and composition. This eliminates the manual 
-filtering workarounds that contribute to 23.5\% of performance issues, where developers currently process all files only to discard most during post filtering.
+rules enable advanced pattern operations previously requiring manual workarounds. This formalism resolves many persistent feature requests and workarounds seen in the developer 
+posts and enables principled glob construction for cases like \texttt{(*.log|*.tmp)}. 
+The substitution mechanism \texttt{\$\{}pattern\_name\texttt{\}} addresses 19.7\% of feature gap requests by enabling pattern reuse and composition. Negation support in the flags 
+eliminates manual filtering workarounds that contribute to 23.5\% of performance issues, where developers currently process all files only to discard most during post filtering.
 Crucially, \textsc{GlobSpec}'s regular language foundation enables linear time pattern checking through finite automata compilation.
 
 \textsc{GlobSpec} transforms globbing from a world of \textbf{implicit, hidden behaviors} where identical pattern strings produce different results across contexts to a 
 world of \textbf{explicit, controlled execution} where patterns maintain universal meaning through transparent, configurable interfaces.
 
-This architectural shift enables reference implementations, pattern validation tools, cross platform testing suites, and security auditing capabilities previously impossible 
+This architectural shift enables reference implementations, pattern validation tools, cross platform testing suites, and security auditing capabilities previously infeasible 
 with implementation defined globbing. By providing this formal foundation, \textsc{GlobSpec} addresses the reliability, security, and portability concerns quantified throughout 
 our empirical study while establishing globbing as a verifiable software engineering primitive.
