--- a/globs/globs_title_page.tex
+++ b/globs/globs_title_page.tex
@@ -1,7 +1,7 @@
 \documentclass{article}
 
 \title{An Empirical Analysis of the Glob Ecosystem}
-\author{Phyllis Lim \and Connor Adkins \and Mark Marron}
+\author{Phyllis Lim \and Connor Adkins \and Mark Marron\footnote{Corresponding Author: Mark Marron, mark.marron@uky.edu}}
 \date{}
 
 \usepackage{url}
@@ -25,13 +25,13 @@ We propose a path forward through standardization and introduce a formal specifi
 bridge the expressiveness gap between current implementations and developer requirements.
 \end{abstract}
 
-\section*{Keywords}
+\subsection*{Keywords}
 Globs, Pattern Matching, Domain Specific Language, Software Engineering
 
-\section*{Statements and Declarations}
+\subsection*{Statements and Declarations}
 No funding was received for conducting this study. The authors have no relevant financial or non-financial interests to disclose.
 
-\section*{Data-Availability Statement}
+\subsection*{Data-Availability Statement}
 The data used in this study, including the glob corpus, forum posts, and CVE issues is available via github (\url{https://anonymous.4open.science/r/glob-artifact-AA95}) as an evolving community data set and as a stable 
 reproduction package at Zenodo, (\url{https://doi.org/10.5281/zenodo.18462402}).
 
