--- a/globs/globs.tex
+++ b/globs/globs.tex
@@ -236,6 +236,29 @@ reproduction package at Zenodo, (\url{https://doi.org/10.5281/zenodo.18462402}).
 %and remove the percent signs.
 %\end{acknowledgements}
 
+\section*{Declarations}
+\subsection*{Funding:}
+The authors did not receive support from any organization for the submitted work.
+
+\subsection*{Ethical approval:}
+Not applicable.
+
+\subsection*{Informed consent:}
+Not applicable.
+
+\subsection*{Author Contributions:}
+Phyllis Lim lead the data collection and analysis. Connor Adkins led the design and implementation 
+work on GlobSpec. Mark Marron contributed to the interpretation of results and manuscript preparation.
+
+\subsection*{Data Availability Statement:}
+The data used in this study, including the glob corpus, forum posts, and CVE issues is available via github (\url{https://anonymous.4open.science/r/glob-artifact-AA95}) as an evolving community data set and as a stable 
+reproduction package at Zenodo, (\url{https://doi.org/10.5281/zenodo.18462402}).
+
+\subsection*{Conflict of Interest:}
+The authors declare that they have no conflict of interest.
+
+\subsection*{Clinical Trial Number:}
+Clinical trial number: not applicable.
 
 % Authors must disclose all relationships or interests that 
 % could have direct or potential influence or impart bias on 
